# project1-energy-analysis

./: .gitignore  AI_USAGE.md  EIA_Daily_Energy_Demand.ipynb  Learner_Shoe_Size_Summary.docx  README.md  pyproject.toml  requirement.txt  requirements.txt  video_link.md
Dashboard/: main_dashboard.py  visualization.py
config/: __init__.py  config.yaml
config/.ipynb_checkpoints/: __init__-checkpoint.py
dashboards/: app.py
data/processed/: daily_2025-07-20_20250725_013933.csv  daily_2025-07-20_20250725_030115.csv  daily_2025-07-20_20250725_045451.csv  daily_2025-07-20_20250725_052825.csv  daily_2025-07-20_20250725_113412.csv  daily_2025-07-20_20250725_114724.csv  daily_2025-07-20_20250725_115207.csv  daily_2025-07-20_20250725_140544.csv  daily_2025-07-20_20250725_141237.csv  daily_2025-07-20_20250725_175242.csv  daily_2025-07-21_20250726_161502.csv  daily_2025-07-24_20250726_182825.csv  daily_2025-07-24_20250726_183256.csv  daily_2025-07-24_20250726_185950.csv  daily_2025-07-24_20250726_223831.csv  daily_2025-07-25_20250727_001328.csv  daily_2025-07-25_20250727_005847.csv  daily_2025-07-25_20250727_010815.csv  daily_2025-07-25_20250727_011848.csv  daily_2025-07-25_20250727_011959.csv  daily_2025-07-25_20250727_012556.csv  daily_2025-07-25_20250727_015155.csv  daily_2025-07-25_20250727_143424.csv  (+214 more)
notebooks/: exploration.ipynb
src/: analysis.py  config.py  data_fetcher.py  data_processor.py  pipeline.py  visualization.py
tests/: combined_visualization.py  conftest.py  test_analysis.py  test_fetcher.py  test_pipeline.py  test_processor.py
(+2319 files in other folders)
