[project]
name = "us-weather-energy-analysis"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "streamlit>=1.20.0",
    "plotly>=5.10.0",
    "loguru>=0.6.0",
    "backoff>=2.2.0",
    "pytest>=7.0.0",
    "scipy>=1.9.0",
    "python-dotenv>=0.20.0",
    "python-dateutil>=2.8.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"